--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,7 @@ span {
   display: block;
   position: absolute;
   border: #555 solid 1px;
+  border-radius: 0 0 4px 4px;
   box-sizing: border-box;
 }
 
